Crash after undoing quadriflow remesh on duplicate with armature deform #74397

Closed
opened 2020-03-03 13:32:02 +01:00 by Dimitar Toshev · 8 comments

System Information
Operating system: Windows 10
Graphics card: GeForce 1080ti

Blender Version
Broken: 2.82
Worked: Haven't tested an earlier version

Short description of error
Crash

Exact steps for others to reproduce the error

  1. open attached blender file quadriflow_crash.blend
  2. duplicate the mesh
  3. run quadriflow with default settings, faces=2000
  4. press ctrl-z
  5. crashes every time

It doesn't crash if I set it to 4000 faces. It also doesn't crash if I just open, remesh, undo - I have to duplicate the mesh first.

**System Information** Operating system: Windows 10 Graphics card: GeForce 1080ti **Blender Version** Broken: 2.82 Worked: Haven't tested an earlier version **Short description of error** Crash **Exact steps for others to reproduce the error** 1. open attached blender file [quadriflow_crash.blend](https://archive.blender.org/developer/F8384890/quadriflow_crash.blend) 2. duplicate the mesh 3. run quadriflow with default settings, faces=2000 4. press ctrl-z 5. crashes every time It doesn't crash if I set it to 4000 faces. It also doesn't crash if I just open, remesh, undo - I have to duplicate the mesh first.
Author

Added subscriber: @mo6eeeb

Added subscriber: @mo6eeeb
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

I can reproduce the issue. Although not every time in my own builds, but sometimes. Looks like a double free or a free of some not-allocated pointer, but cannot tell for sure yet.

I can reproduce the issue. Although not every time in my own builds, but sometimes. Looks like a double free or a free of some not-allocated pointer, but cannot tell for sure yet.
Member

Added subscriber: @ZedDB

Added subscriber: @ZedDB
Sebastian Parborg self-assigned this 2020-03-13 15:03:18 +01:00

This issue was referenced by 110a35ef5a

This issue was referenced by 110a35ef5a0e3eae78e48d64b43c456b76c9efa1

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'

Let me know if you can still manage to get it to crash.

Let me know if you can still manage to get it to crash.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#74397
No description provided.